# sentinel-fraud-env

./: Dockerfile  README.md  TODO.md  environment.py  inference.py  models.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: easy.py  hard.py  medium.py
